css/style.css
/*GENERAL*/

li{
	padding: 0px 30px;
}

/*Logo*/
.logoheader{
 	padding-left: 30px;
	height: 60px;
}


/*NAVBAR*/
.bg-dark{
	background-color: rgba(0, 0, 0, 1) !important;
}


#about img{
	background-size: cover;
	position: absolute;
	z-index: -1;
}

.display-4{
	color:white !important;
}

.nav-item .nav-link{
	color:#fff !important;
	font-size: 14px;
	transition: 0.20s;
	font-family: 'Lato', sans-serif;
	font-weight: bold;
}

.nav-link:hover{
	color:#17a2b8 !important;
}

/*WELCOME SECTİON*/
#welcome{
	background: url('../img/work.jpg') no-repeat center center fixed;
	background-size: cover;
}

#welcome .row{
	height: 100vh;
}

#welcome .btn-outline-info{
	color:#fff;
	height: 45px;
	border-radius: 0;
	padding: 10px 25px;
	background-color: #17a2b8;
}

#welcome .btn-outline-info:hover{
	background-color: rgba(0, 0, 0, 0);
}

#welcome button:focus{
	border:none !important;
}

#welcome h2{
	font-family: 'Quicksand', sans-serif;
	text-shadow: 0px 0px 0.1px black;
}

#welcome a{
	font-family: 'Josefin Sans', sans-serif;
}
/*ABOUT*/
#about{
	background-color: #eee;
}

#about .row{
	padding: 80px;
}

#about .namedes{
	color:#17a2b8;
	font-weight: bold;
}

#about .img-1{
	position: relative;
	z-index: 2;
	border: 4px solid #17a2b8;
	margin-top: 30px;
	margin-bottom: 20px;
}

#about h4{
	color: #17a2b8;
	margin-left: 10px;
	margin-top: 30px;
	font-size: 25px;
}

#about p{
	color:#000;
	font-size: 18px;
	margin-left: 10px;
	line-height: 30px;
	font-family: 'Quicksand', sans-serif;
}

#about .whomi{
	background-color: #fff;
	transition: 0.3s;
	border: solid 1px lightblue	;
	margin-top: 30px;
	margin-bottom: 20px;
}

#about .cv{
	color:#fff;
	background-color: blue;
	padding: 10px;
	transition: 0.2s;
	width: 50%;
	text-align: center;
}

#about .cv:hover{
	background-color: #fff;
	color:blue;
}

/*About social menus*/
#about .social-menus{
	margin-top: 15px;
	text-align: center;
	padding: 15px;
}
#about .social-menus a{
	transition: 0.2s;
}

#about .social-menus .linkedin{
	color: #17a2b8;
}

#about .social-menus .github{
	color: #000;
}

#about .social-menus .instagram{
	color: #8a3ab9;
}
/*works*/
#works{
	background-color: #fff;
}

#works .works-title{
	text-align: center;
	font-family: 'Josefin Sans', sans-serif;
	padding: 50px;
	color: #17a2b8;
}

#works .card{
	background-color:#eee;
	color:#000;
	transition: 0.2s;
}

#works .card img{
	height: 210px;
}

#works .col-md-4{
	margin-bottom: 45px;
}


/*referances*/

#referances{
	background: url('../img/service.jpg');
	background-size: cover;
	height: 70%;
}

#referances .referances-title{
	text-align: center;
	font-family: 'Josefin Sans', sans-serif;
	padding: 40px;
	color: #fff;
}

#referances .card-body{
	color: #fff;
	text-align: center;
}

#referances .col-md-4{
	margin-top: 20px;
}

#referances .col h3{
	color:#fff;
	font-size: 40px;
	padding-bottom: 20px;
	text-shadow: 0px 0px 1px black;
	font-family: 'Josefin Sans', sans-serif;
}

#referances img{
	width: 40%;
}

/*HOBBIES*/

#hobbies{
	background-color: #eee;
	padding-bottom: 70px;
}

#hobbies .row{
	padding: 20px;
}

#hobbies .col-4 a{font-family: 'Inter', sans-serif !important;}

#hobbies .title-hobbies{
	font-family: 'Inter',sans-serif;
	text-align: center;
	color: #17a2b8;
	padding-top: 25px;
	font-size: 29px;
}
#hobbies .col-8{
	text-align: center;
	line-height: 37px;
	font-family: 'Josefin Sans',sans-serif;
	background-color: #fff;
	padding: 30px;
}

#hobbies .col-8 i{color:#17a2b8; padding: 18px;}
#hobbies .col-8 span{color:#17a2b8;}

/*CONTACT*/
#contact{
	background: url('../img/contact.png') no-repeat center center fixed;
	background-size: cover;
}

#contact p{color:#fff;}
#contact h4{color:#17a2b8;}
#contact h3{color:#17a2b8; font-family: 'Domine', serif;}
#contact .py-4 a{
	padding: 20px;
	color:#fff;
}

#contact .py-4 a:hover{
	color:#17a2b8;
}

#contact .input-group-addon{
	padding: 10px;
	background-color: #17a2b8;
	color:#fff;
}

#contact .btn-block{
	background-color: #17a2b8;
	border-radius: 0px;
	color:#fff;
	font-family: lato,sans-serif;
}

#contact .btn-block:hover{
	background-color: rgba(0, 0, 0, 0);
	color:#fff;
}

